2000-11-02  John Harper  <jsh@eazel.com>

	* events.c (focus_in, focus_out): pass MODE parameter to
	focus-{in,out}-hook as for leave/enter hooks

2000-10-28  John Harper  <jsh@eazel.com>

	* windows.c (window_input_hint_p): new function
	(focus_on_window, Fwindow_wants_input_p): use
	window_input_hint_p. Fixes the bug where window-wants-input-p
	wasn't checking if the InputHint flag was set before reading
	the value

2000-10-24  John Harper  <jsh@eazel.com>

	* events.c: reverted last change (it breaks some focus stuff),
	instead the leave/enter hooks pass an extra argument: MODE, one
	of the symbols `normal', `grab' or `ungrab', the xcrossing.mode
	field of the event

	* events.c: only call leave-notify-hook or enter-notify-hook
	for NotifyNormal events (i.e. ignore Grab/Ungrab events since
	they don't really represent the pointer crossing window
	boundaries)

2000-10-22  John Harper  <jsh@eazel.com>

	* functions.c (Fdisplay_message): new attribute `head . ID'
	specifying the head to centre the message on. Adapted from a
	patch from Geoff Reedy <vader21@imsa.edu>

2000-10-19  John Harper  <jsh@eazel.com>

	* version 0.32

2000-10-18  John Harper  <john@dcs.warwick.ac.uk>

	* events.c (property_notify): track changes to the
	flags.XUrgencyHint field, invoke window-state-change-hook when
	it flips (passing `urgency' state). Also fixed some obscure gc
	protection stuff

	* windows.c (Fwindow_urgent_p): new function

2000-10-09  John Harper  <john@dcs.warwick.ac.uk>

	* keys.c (eval_input_event): only set current_event to null
	when leaving the top-level event loop. This helps when working
	with multiple commands and/or event loops

2000-10-05  John Harper  <john@dcs.warwick.ac.uk>

	* windows.c (Fwindow_wants_input_p): if no WM_HINTS, default to
	false. Also if the window supports WM_TAKE_FOCUS, always return
	true

	(focus_on_window): if sending a WM_TAKE_FOCUS message, only
	explicitly focus on the window if it's accepts-input hint is
	set
