@@ -1,3 +1,8 @@
+2000-11-06  John Harper  <jsh@eazel.com>
+
+	* pixmap-cache.c: added code to disable the pixmap cache if
+	DISABLE_CACHE preprocessor macro is defined
+
 2000-11-02  John Harper  <jsh@eazel.com>
 
 	* events.c (focus_in, focus_out): pass MODE parameter to
